# sch2jn

./: .gitignore  Cargo.toml  README.md  example.env
src/: handlers.rs  lib.rs  main.rs
static/: README.md  index.html  manifest.json
static/css/: styles.css
static/js/: app.js  logs.js  main.js  modal.js  tests.js
static/static/: README.md
tests/: integration_tests.rs
