[package]
name = "sch2jn"
version = "0.1.2"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
tokio = { version = "1", features = ["macros", "signal"] }